# shuttle_http

./: .ocamlformat  .ocamlformat-ignore  CHANGES.md  README.md  dune-project  h11.opam  h11.opam.template  index.html  shuttle.opam  shuttle_http.opam  shuttle_http.opam.template  shuttle_ssl.opam  shuttle_ssl.opam.template  shuttle_websocket.opam
.github/workflows/: test.yml
bench/: dune  main.ml
certs/: localhost.crt  localhost.key
core/lib/: bytebuffer.ml  bytebuffer.mli  connection.ml  connection.mli  dune  import.ml  input_channel.ml  input_channel.mli  input_channel0.ml  output_channel.mli  output_channel0.ml  shuttle.ml
core/test/: channel_tests.ml  dune
example/: cat_shuttle.ml  dune  echo.ml  http_client.ml  http_server.ml  main.ml  redis_bench_async.ml  redis_bench_shuttle.ml
http/: README.md  dune  import.ml  server.ml  server.mli
http/bench/: dune  http_server_bench.ml  parser_bench.ml
http/doc/: index.mld
http/src/: body.ml  body.mli  body0.ml  bytebuffer.ml  bytebuffer.mli  client.ml  client.mli  dune  headers.ml  headers.mli  import.ml  input_channel.ml  input_channel.mli  input_channel0.ml  io.ml  io.mli  io_intf.ml  io_util.ml  meth.ml  meth.mli  output_channel.ml  output_channel.mli  output_channel0.ml  parser.ml  parser.mli  request.ml  request.mli  response.ml  response.mli  response0.ml  server.ml  server.mli  server_intf.ml  shuttle_http.ml  shuttle_http.mli  shuttle_parser_stubs.c  shuttle_stubs.c  slice.ml  slice.mli  ssl.ml  (+13 more)
http/test/: dune  helper.ml  id_000000,sig_06,src_000000,time_3062,execs_583,op_havoc,rep_2  test_header.ml  test_http.ml  test_method.ml  test_parser.ml  test_server.ml  test_shuttle_http.ml  test_status.ml
http/websocket/: dune  shuttle_websocket.ml  shuttle_websocket.mli
http11/bench/: http_server_bench.ml
http11/doc/: dune  index.mld
http11/src/: body.ml  bytebuffer.mli  client.ml  client.mli  dune  headers.ml  headers.mli  input_channel.ml  input_channel.mli  input_channel0.ml  io_util.ml  meth.ml  output_channel.ml  request.ml  response.mli  server.ml  server.mli  shuttle.ml  ssl.ml
http11/test/: helper.ml  id_000001,sig_06,src_000000,time_4184,execs_831,op_havoc,rep_8  id_000002,sig_06,src_000000,time_5043,execs_1025,op_havoc,rep_2  id_000003,sig_06,src_000000,time_5674,execs_1176,op_havoc,rep_2  id_000004,sig_06,src_000000,time_9755,execs_2148,op_havoc,rep_2  test_header.ml  test_http.ml  test_method.ml
lib/: bytebuffer.ml  bytebuffer.mli  connection.ml  connection.mli  dune  import.ml  input_channel.ml  input_channel.mli  input_channel0.ml  output_channel.ml  output_channel.mli  output_channel0.ml  reader.ml  reader.mli  shuttle.ml  writer.ml  writer.mli
shuttle/: index.html
shuttle/Shuttle/: index.html
shuttle/Shuttle/Bytebuffer/: index.html
shuttle/Shuttle/Connection/: index.html
shuttle/Shuttle/Input_channel/: index.html
shuttle/Shuttle_test/: index.html
shuttle/lib/: bytebuffer.ml  bytebuffer.mli  connection.ml  connection.mli  dune  input_channel.ml  input_channel.mli  input_channel0.ml  output_channel.ml  output_channel.mli  output_channel0.ml  shuttle.ml  shuttle_stubs.c  slice.mli  tcp_channel.ml  tcp_channel.mli
shuttle/test/: channel_tests.ml  test_bytebuffer.ml
shuttle_http/: index.html
shuttle_http/Shuttle_http/: index.html
shuttle_http/Test_shuttle_http/: index.html
shuttle_http/src/: body.ml  dune  io.ml  server.ml  shuttle_http.ml  shuttle_http.mli
shuttle_ssl/: index.html  shuttle_ssl.ml  shuttle_ssl.mli
shuttle_ssl/Shuttle_ssl/: index.html
ssl/: dune  shuttle_ssl.ml  shuttle_ssl.mli
test/: channel_tests.ml  dune  input_channel_test.ml  main.ml  main_new.ml
tools/: dune  generate_status_codes.ml  http-status-codes-1.csv
(+80 files in other folders)
